; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_semantics.c_finish_omp_flush.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_semantics.c_finish_omp_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@built_in_decls = common dso_local global i32* null, align 8
@BUILT_IN_SYNCHRONIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @finish_omp_flush() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32*, i32** @built_in_decls, align 8
  %4 = load i64, i64* @BUILT_IN_SYNCHRONIZE, align 8
  %5 = getelementptr inbounds i32, i32* %3, i64 %4
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = call i32 @finish_call_expr(i32 %7, i32* null, i32 0, i32 0)
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @finish_expr_stmt(i32 %9)
  ret void
}

declare dso_local i32 @finish_call_expr(i32, i32*, i32, i32) #1

declare dso_local i32 @finish_expr_stmt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
